@@ -24,6 +24,9 @@ DIAGNOSTICS
 • "float" in |vim.diagnostic.JumpOpts|.		Use "on_jump" instead.
 • "float" in |vim.diagnostic.Opts.Jump|.	Use "on_jump" instead.
 
+EVENTS
+• *BufModifiedSet*	Use |OptionSet| with pattern "modified" instead.
+
 HIGHLIGHTS
 
 • *:ownsyntax* *w:current_syntax*	Use 'winhighlight' instead.
